--- a/.github/actions/build_install_collection/action.yml
+++ b/.github/actions/build_install_collection/action.yml
@@ -49,7 +49,7 @@ runs:
 
     - name: Install bindep from pypi
       run: |
-        if ${{ matrix.python-version }}; then
+        if ${{ matrix.python-version }} != ''; then
           python${{ matrix.python-version }} -m pip install bindep
         else
           python3 -m pip install bindep
@@ -73,7 +73,7 @@ runs:
       if: ${{ inputs.install_python_dependencies == 'true' }}
 
     - run: |
-        if ${{ matrix.python-version }}; then
+        if ${{ matrix.python-version }} != ''; then
           python${{ matrix.python-version }} -m pip install -r requirements.txt -r test-requirements.txt
         else
           python3 -m pip install -r requirements.txt -r test-requirements.txt
