--- a/.github/actions/build_install_collection/action.yml
+++ b/.github/actions/build_install_collection/action.yml
@@ -72,7 +72,8 @@ runs:
     - name: Install collection python requirements
       if: ${{ inputs.install_python_dependencies == 'true' }}
 
-    - run: |
+    - name: Install collection python requirements
+      run: |
         if ${{ matrix.python-version }} != ''; then
           python${{ matrix.python-version }} -m pip install -r requirements.txt -r test-requirements.txt
         else
