--- a/.github/actions/build_install_collection/action.yml
+++ b/.github/actions/build_install_collection/action.yml
@@ -49,10 +49,10 @@ runs:
 
     - name: Install bindep from pypi
       run: |
-        if ${{ matrix.python-version != ''}} ; then
-          python${{ matrix.python-version }} -m pip install bindep
+        if ${{ matrix.python-version != ''}}; then
+          sudo python${{ matrix.python-version }} -m pip install bindep
         else
-          python3 -m pip install bindep
+          sudo python3 -m pip install bindep
         fi
       shell: bash
       if: steps.bindep_check.outputs.file_exists == 'true'
@@ -69,18 +69,17 @@ runs:
       working-directory: ${{ inputs.source_path }}
       if: steps.bindep_check.outputs.file_exists == 'true'
 
-   - name: Install collection python requirements
-     if: ${{ inputs.install_python_dependencies == 'true' }}
-
-    - run: python${{ matrix.python-version }} -m pip install -r requirements.txt -r test-requirements.txt
-      if: ${{ matrix.ansible-version != '' }}
-      shell: bash
-      working-directory: ${{ inputs.source_path }}
+    - name: Install collection python requirements
+      if: ${{ inputs.install_python_dependencies == 'true' }}
       
-    - run: python3 -m pip install -r requirements.txt -r test-requirements.txt
-      if: ${{ matrix.python-version == ''}}
+    - run: |
+        if ${{ matrix.python-version != ''}}; then
+          sudo python${{ matrix.python-version }} -m pip install -r requirements.txt -r test-requirements.txt
+        else
+          python3 -m pip install -r requirements.txt -r test-requirements.txt
+        fi
       shell: bash
-      working-directory: ${{ inputs.source_path }}
+      working-directory: ${{ inputs.source_path }}     
 
     - name: identify collection (final installation path and tarball name)
       id: identify
